--- a/client/app/iplb/home/iplb-home.html
+++ b/client/app/iplb/home/iplb-home.html
@@ -127,6 +127,9 @@
                     <cui-tile-item data-term="'iplb_home_tile_configuration_quota_cipher' | translate"
                         data-description="ctrl.configuration.data.sslConfiguration.displayName"
                         data-actions="ctrl.actions.changeCipher"></cui-tile-item>
+                    <cui-tile-item data-term="'iplb_home_tile_configuration_private_network' | translate"
+                        data-description="'Inactif'"
+                        data-actions="ctrl.actions.activateVrack"></cui-tile-item>
                     <cui-tile-item data-actions="[ctrl.actions.addZone, ctrl.actions.deleteZone]">
                         <cui-tile-definitions>
                             <cui-tile-definition-term data-term="'iplb_home_tile_configuration_quota_datacenter' | translate"></cui-tile-definition-term>
