--- a/client/app/iplb/home/iplb-home.html
+++ b/client/app/iplb/home/iplb-home.html
@@ -118,7 +118,7 @@
         </div>
         <div class="col-xm-12 col-md-4">
            <cui-tile data-title="'iplb_home_tile_configuration' | translate"
-                data-loading="ctrl.configuration.loading"
+                data-loading="ctrl.configuration.loading || ctrl.vrackCreationRules.loading"
                 class="h-100">
                 <cui-tile-body>
                     <cui-tile-item data-term="'iplb_home_tile_configuration_name' | translate"
@@ -127,10 +127,16 @@
                     <cui-tile-item data-term="'iplb_home_tile_configuration_quota_cipher' | translate"
                         data-description="ctrl.configuration.data.sslConfiguration.displayName"
                         data-actions="ctrl.actions.changeCipher"></cui-tile-item>
-                    <cui-tile-item data-term="'iplb_home_tile_configuration_private_network' | translate"
-                        data-description="'Inactif'"
-                        data-actions="ctrl.actions.activateVrack"></cui-tile-item>
-                    <cui-tile-item data-actions="[ctrl.actions.addZone, ctrl.actions.deleteZone]">
+                    <cui-tile-item data-actions="[ctrl.actions.activateVrack, ctrl.actions.deActivateVrack]">
+                        <cui-tile-definitions>
+                            <cui-tile-definition-term data-term="'iplb_home_tile_configuration_private_network' | translate"></cui-tile-definition-term>
+                            <cui-tile-definition-description>
+                                <span data-translate="{{ 'iplb_vrack_box_status_' + ctrl.vrackCreationRules.data.status }}"></span>
+                                <small data-ng-if="ctrl.vrackCreationRules.data.status === 'active'">({{ ctrl.vrackCreationRules.data.displayName }})</small>
+                            </cui-tile-definition-description>
+                        </cui-tile-definitions>
+                    </cui-tile-item>
+                    <cui-tile-item>
                         <cui-tile-definitions>
                             <cui-tile-definition-term data-term="'iplb_home_tile_configuration_quota_datacenter' | translate"></cui-tile-definition-term>
                             <cui-tile-definition-description-region data-regions="ctrl.configuration.data.zone"></cui-tile-definition-description-region>
